--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: auto;
   flex-direction: column;
   width: 350px;
   padding: 20px;
